--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,4 +13,6 @@
  *= require_tree .
  *= require_self
  */
- @import "bootstrap";
+
+ /* Custom bootstrap variables must be set or imported *before* bootstrap. */
+@import "bootstrap";
