--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,45 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>NoteApp</title>
+    <title>Mynotes</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all' %>
-    <%= javascript_pack_tag 'application' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
   </head>
 
-  <body>
-    <%= yield %>
+  <body class="text-center body" data-new-gr-c-s-check-loaded="14.1010.0" data-gr-ext-installed="">
+    <% notice_class = !notice.nil? && notice.include?("unsucc") ? "notice-red" : "notice-green"%>
+
+    <p id=<%="#{notice_class}"%>><%= notice %></p>
+
+    <% if !session[:current_user].blank? %>
+      <%= render '/notes/nav' %>
+      <div style="margin-top: 70px">
+        <%= yield %>
+      </div>
+    <% else %>
+    <div class="logo logo-ds">
+      <div class="logo">
+        NOTES APP
+      </div>
+      <div class="logo">
+        -----------------
+      </div>
+      <div class="logo">
+        -----------------
+      </div>
+      <div class="logo">
+        -----------------
+      </div>
+    </div>
+      
+      <%= yield %>
+    <% end %>
+
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script> 
   </body>
 </html>
